--- a/IssuesTracker/IssuesTracker/IssuesTracker.csproj
+++ b/IssuesTracker/IssuesTracker/IssuesTracker.csproj
@@ -214,6 +214,8 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <Content Include="Scripts\app\issuemodal.js" />
+    <Content Include="Scripts\app\kanbancards.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\esm\popper-utils.js" />
@@ -236,9 +238,9 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\kanban.js" />
+    <Content Include="Scripts\app\kanban.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Scripts\index.js" />
+    <Content Include="Scripts\app\index.js" />
     <Content Include="Scripts\popper-utils.js" />
     <Content Include="Scripts\popper-utils.min.js" />
     <Content Include="Scripts\popper.js" />
@@ -251,7 +253,6 @@
     <Content Include="Scripts\umd\popper.min.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\AddIssue.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\GetGridIssues.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
