--- a/IssuesTracker/IssuesTracker/IssuesTracker.csproj
+++ b/IssuesTracker/IssuesTracker/IssuesTracker.csproj
@@ -195,25 +195,14 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201911041454534_InitialCreate.cs" />
-    <Compile Include="Migrations\201911041454534_InitialCreate.Designer.cs">
-      <DependentUpon>201911041454534_InitialCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201911041526038_changeIssue.cs" />
-    <Compile Include="Migrations\201911041526038_changeIssue.Designer.cs">
-      <DependentUpon>201911041526038_changeIssue.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201911150829114_adding identity tables.cs" />
-    <Compile Include="Migrations\201911150829114_adding identity tables.Designer.cs">
-      <DependentUpon>201911150829114_adding identity tables.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201911181305268_RoleIdtoUser.cs" />
-    <Compile Include="Migrations\201911181305268_RoleIdtoUser.Designer.cs">
-      <DependentUpon>201911181305268_RoleIdtoUser.cs</DependentUpon>
+    <Compile Include="Migrations\201911221144514_DB changes.cs" />
+    <Compile Include="Migrations\201911221144514_DB changes.Designer.cs">
+      <DependentUpon>201911221144514_DB changes.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AppIdentity\AppRole.cs" />
@@ -227,6 +216,7 @@
     <Compile Include="Models\Project.cs" />
     <Compile Include="Models\Repository.cs" />
     <Compile Include="Models\SecureString.cs" />
+    <Compile Include="Models\User_for_View.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -266,6 +256,7 @@
     </None>
     <Content Include="Scripts\app\issuemodal.js" />
     <Content Include="Scripts\app\kanbancards.js" />
+    <Content Include="Scripts\app\management.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\esm\popper-utils.js" />
@@ -329,22 +320,10 @@
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Home\IssueModal.cshtml" />
     <Content Include="Views\Home\KanbanCards.cshtml" />
-    <Content Include="Views\Home\Login.cshtml" />
-    <Content Include="Views\Home\Register.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Migrations\201911041454534_InitialCreate.resx">
-      <DependentUpon>201911041454534_InitialCreate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201911041526038_changeIssue.resx">
-      <DependentUpon>201911041526038_changeIssue.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201911150829114_adding identity tables.resx">
-      <DependentUpon>201911150829114_adding identity tables.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201911181305268_RoleIdtoUser.resx">
-      <DependentUpon>201911181305268_RoleIdtoUser.cs</DependentUpon>
-    </EmbeddedResource>
+    <Content Include="Views\Account\Login.cshtml" />
+    <Content Include="Views\Account\Register.cshtml" />
+    <Content Include="Views\Home\ProjectModal.cshtml" />
+    <Content Include="Views\Home\Management.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -355,6 +334,11 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201911221144514_DB changes.resx">
+      <DependentUpon>201911221144514_DB changes.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
